[package]
name = "git-spy"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
console = "0.16.1"
dialoguer = "0.12.0"
figlet-rs = "0.1.5"
indicatif = "0.18.3"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tabled = { version = "0.20.0", features = ["ansi"] }
tokio = { version = "1.48.0", features = ["full"] }
webbrowser = "1.0.6"
